# yet-another-voice-diary

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO-SHORT.MD
backend/: README.md  __init__.py  config.py  mcp_server.py  models.py  pyproject.toml  run.py
backend/api/: app.py  debug_report.py  deps.py  diagnostics.py  schemas.py
backend/e2e-tests/: README.md  conftest.py  pytest.ini  test_api_config.py  test_api_contacts.py  test_api_queue.py  test_api_search.py  test_api_sessions.py  test_firered_vad_model.py  test_model_lifecycle.py  test_nemo_sortformer_import.py  test_pipeline_ws.py  test_preload_status.py  test_super_debug_lightweight.py
backend/identification/: __init__.py  clustering.py  matching.py  resolver.py
backend/mcp/: __init__.py  diary_search.py  read_connection.py
backend/pipeline/: __init__.py  coordinator.py  engine.py  turns.py  vad.py
backend/providers/: __init__.py  asr.py  base.py  compat.py  devices.py  diarization.py  elevenlabs.py  embedding.py  vad.py
backend/refinement/: __init__.py  recording.py  service.py
backend/scripts/: clear_db.py  import_blocklists.py  score_histogram.py  seed_dev_db.py  verify_nemo_sortformer.py  verify_unix_install.py  verify_windows_install.py
backend/storage/: __init__.py  contact_repo.py  database.py  fts_migration.py  migrations.py  pipeline_errors_migration.py  queue_repo.py  refinement_migration.py  schema.sql  search_repo.py  session_repo.py  source_migration.py  speaker_segment_diarization_model_migration.py  voice_profile_metadata_migration.py
backend/tests/: api_fixtures.py  conftest.py  test_api_config_rt.py  test_api_contacts.py  test_api_models.py  test_api_search.py  test_api_sessions.py  test_api_ws.py  test_app_startup_preload.py  test_asr_provider.py  test_config.py  test_contact_repo.py  test_database.py  test_dev_audio_capture.py  test_diagnostics.py  test_diarization_provider.py  test_identification_helpers_unit.py  test_integration.py  test_itn_normalizer.py  test_matching.py  test_mcp_search.py  test_models.py  test_pipeline_coordinator.py  test_queue_api_unit.py  test_queue_repo_unit.py  test_refinement.py  test_resolver.py  test_runtime_installers.py  test_vad_provider.py
docs/: todo.md  (+15 more)
(+214 files in other folders)
