[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-diary-backend"
version = "0.1.0"
description = "Voice Diary FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "websockets>=12",
  "mcp>=1.20,<2",
]

[project.scripts]
voice-diary-mcp = "backend.mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=9",
  "pytest-cov>=4",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "mypy>=1",
]
# PyPI installs CPU-only torch wheels on Windows. To use CUDA in this app,
# preinstall matching CUDA wheels from https://download.pytorch.org/whl/
# before `pip install -e ".[ml]"`. Keep this on the torch 2.8 line because
# `pyannote.audio==4.0.3` and the current SpeechBrain/PyAnnote stack in
# `web_app` do not install cleanly against newer torch 2.11 wheels.
# Do not include k2 on native Windows. SpeechBrain exposes k2 as an optional
# lazy integration, but Windows wheels can install without the native _k2 module
# and break unrelated NeMo/PyAnnote imports.
ml = [
  "faster-whisper>=1.2",
  "transformers>=4.40,<5",
  "accelerate>=0.28",
  "silero-vad>=5.1",
  "fireredvad==0.0.2",
  "huggingface-hub>=0.34,<1",
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "torchvision==0.23.0",
  "speechbrain>=1.0",
  "pyannote.audio==4.0.3",
]
ml-nemo = [
  "cython",
  "numba==0.65.1",
  "llvmlite==0.47.0",
  "nemo_toolkit[asr] @ git+https://github.com/NVIDIA/NeMo.git@7ccc79b525f205c2c20595a7dfc927051610962c",
]

# This pyproject sits inside the `backend` package itself. List subpackages
# explicitly and remap the base so each `backend.<sub>` resolves to `./<sub>`.
[tool.setuptools]
packages = [
  "backend",
  "backend.api",
  "backend.api.routers",
  "backend.storage",
  "backend.providers",
  "backend.providers.itn",
  "backend.pipeline",
  "backend.identification",
  "backend.mcp",
]
package-dir = {"backend" = "."}

[tool.setuptools.package-data]
"backend.providers.itn" = ["*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
